--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 openjfx-11.0.2_linux-x64_bin-sdk
+java3D
 .idea
 lab1/*
 !lab1/src
@@ -7,5 +8,9 @@ lab2/*
 sample.fxml
 lab3/*
 !lab3/src
+lab4/*
+!lab4/src
+!lab4/source_folder
+
 
 
