--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
 openjfx-11.0.2_linux-x64_bin-sdk
 java3D
 .idea
-lab1/*
-!lab1/src
-lab2/*
-!lab2/src
 sample.fxml
-lab3/*
-!lab3/src
-lab4/*
-!lab4/src
-!lab4/source_folder
+*.iml
+
 
 
 
